--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1338,7 +1338,7 @@
     "message": "Secure Finnie with a password."
   },
   "securePasswordsHaveAtLeast8Characters": {
-    "message": "Secure passwords have at least 8 characters and include uppercase & lowercase letters, numbers, and special characters (e.g. !@#$$%)."
+    "message": "Secure passwords have at least 8 characters and include uppercase & lowercase letters, numbers, and special characters (e.g. !@$%)."
   },
   "security": {
     "message": "Security"
