--- a/src/_locales/vi/messages.json
+++ b/src/_locales/vi/messages.json
@@ -1332,7 +1332,7 @@
     "message": "Bảo mật Finnie với mật khẩu."
   },
   "securePasswordsHaveAtLeast8Characters": {
-    "message": "Mật khẩu phải có ít nhất 8 kí tự, bao gồm chữ thường, chữ hoa, số, kí tự đặc biệt (vd !@#$$%)."
+    "message": "Mật khẩu phải có ít nhất 8 kí tự, bao gồm chữ thường, chữ hoa, số, kí tự đặc biệt (vd !@$%)."
   },
   "security": {
     "message": "Bảo mật"
